JG-2003-01-16-0  Bugfix:    Fixed a memory leak in the "simple scheduling 
                            interface"

CR-2003-01-15-2  Testsuite: New paramter to run all tests in a subtree of
                            the checktree: check PATH RUNLEVEL

AA-2003-01-15-0  Bugfix:    crash of qmon fixed: Cluster Config -> global -> Modify (Boingg)

CR-2003-01-15-1  Testsuite: new performance test: throughput

CR-2003-01-15-0  Testsuite: new procedure: create_gnuplot_xy_gif()
                            - generate gnuplot xy charts (only if gnuplot
                              is installed and in user binary path)

CR-2003-01-14-3  Testsuite: modified remote procedures:
                            - prototype for sendmail mail messages 
                              in mime format
                            - new extra user dummy: ts_def_con2 for
                              start_remote_prog()
                            - bugfix in procedure resolve_upper_arch()

CR-2003-01-14-2  Testsuite: modified file procedures:
                            - get_tmp_file_name(): returned same file
                              name when calling two times in a row.
                            - convert_spool_file_to_html(): new option
                              to return only html content without
                              creating a file.
                            - create_html_table(): new parameters
                              to set border and align in tables
                            new procedures:
                            - read_array_from_file_data()
                            - create_html_target()
                            - create_html_image()

JG-2003-01-14-0  Testsuite: Fixed and improved sharetree test.

CR-2003-01-14-1  Testsuite: New command line parameter for testsuite:
                               no_main2 : don't run main part and don't  
                                          start setup ( used for sourcing 